# SciRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test_vectors.cpp
samples/: RECTILINEAR_shapes_attributes_binary.vtk  STRUCTURED_GRID_block_four_fields_vectors_ascii.vtk  STRUCTURED_GRID_block_four_fields_vectors_binary.vtk  STRUCTURED_POINTS_ascii.vtk  STRUCTURED_POINTS_binary.vtk  UNSTRUCTURED_GRID_cube_MultipleScalar_ascii.vtk  UNSTRUCTURED_GRID_cube_MultipleScalar_binary.vtk  cube_ascii.stl  cube_binary.stl  curvilinear_grid.vtk
src/app/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/colormaps/: Colormaps.h
src/core/: Camera.cpp  Colormaps.h  mesh_loader.cpp  mesh_loader.h  mesh_quality.h  mesh_utils.cpp  obj_parser.cpp  obj_parser.h  stl_parser.cpp  vtk_parser.cpp
src/export/: screenshot.cpp  screenshot.h
src/gizmo/: gizmo.cpp  gizmo.h
src/mesh/: mesh_loader.cpp  mesh_loader.h  mesh_utils.cpp  stl_parser.cpp  vtk_parser.cpp
src/render/: ColormapManager.cpp  LightingModel.cpp  LightingModel.h  MeshGLManager.cpp  MeshGLManager.h  VectorGlyphSet.cpp  VectorGlyphSet.h  colorbar_overlay.cpp  colorbar_overlay.h  gizmo.cpp  render_settings.cpp  render_settings.h  renderer.cpp  renderer.h
src/renderer/: ColormapManager.cpp  ColormapManager.h  LightingModel.cpp  MeshGLManager.cpp  MeshGLManager.h  VectorGlyphSet.cpp  VectorGlyphSet.h  renderer.cpp  renderer.h
src/shaders/: glyph.frag  glyph.vert  grid.frag  grid.vert  mesh.frag  mesh.vert
src/ui/: colorbar_overlay.cpp  custom_viewport_item.cpp  custom_viewport_item.h
tests/: parse_regression.cpp  run_tests.bat  run_tests.sh
ui/: Main.qml  Sidebar.qml
